# MOE_toolkit

./: .env.local.example  .gitignore  IMPLEMENTATION_GAP_REPORT.zh-CN.md  MOE Toolkit - Beta 用户接入说明.md  MOE Toolkit - Beta 运营手册.md  MOE Toolkit - Docker 云服务部署手册.md  MOE Toolkit - 动态工具智能路由系统.md  MOE Toolkit - 开发蓝图.md  MOE Toolkit - 本地轻代理安装包方案.md  README.md  TEST.md  pyproject.toml  用户指南.md
deploy/docker/: Dockerfile  compose.dev.yml  compose.prod.yml
scripts/: build-connector-release.sh  build-tool-images.sh  deploy-cloud.sh  install-connector.sh  load-local-env.sh  smoke-cloud.py  uninstall-connector.sh
src/moe_toolkit/: __init__.py  local_env.py
src/moe_toolkit/admin/: __init__.py  beta_keys.py
src/moe_toolkit/cloud/: __init__.py  admin_ui.py  app.py  cleanup.py  cleanup_main.py  executors.py  main.py  registry.py  security.py  services.py  settings.py  worker_main.py
src/moe_toolkit/connector/: cli.py  client.py  config.py  hosts.py  mcp_server.py  openclaw.py
src/moe_toolkit/schemas/: common.py
tests/: test_beta_keys.py  test_cleanup.py  test_cloud_admin.py  test_cloud_app.py  test_cloud_entrypoints.py  test_cloud_security.py  test_cloud_service.py  test_connector_cli.py  test_connector_client.py  test_connector_config.py  test_connector_mcp_server.py  test_executors.py  test_host_installers.py  test_openclaw_host.py  test_registry.py
tools/curated/markdown-report/: Dockerfile  manifest.json  run_tool.py
tools/curated/matplotlib/: manifest.json  run_tool.py
tools/curated/openpyxl/: Dockerfile  manifest.json  run_tool.py
(+3 files in other folders)
