[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "moe-toolkit"
version = "0.1.0"
description = "MOE Toolkit cloud service and local connector"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "mcp>=1.13.0,<2.0.0",
  "aiofiles>=24.1.0,<25.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
]

[project.scripts]
moe-cloud-api = "moe_toolkit.cloud.main:main"
moe-connector = "moe_toolkit.connector.cli:main"
moe-beta-admin = "moe_toolkit.admin.beta_keys:main"

[tool.hatch.build.targets.wheel]
packages = ["src/moe_toolkit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
